--- a/public/fruitquality.html
+++ b/public/fruitquality.html
@@ -1,33 +1,54 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cloud Functions and Variables Example</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <title>Fruitquality (BME680)</title>
 </head>
 
 <body>
-    <h4>Events</h4>
-    <!-- Events example -->
-    <p>Last Event: <span id="lastevent"></span></p>
-    <p>Counter (Event): <span id="counterevent"></span></p>
+    <div class="container">
+        <h1 class="mt-3">Fruitquality (BME680)</h1>
 
-    <hr>
-    <h4>Variables</h4>
-    <!-- Read variables example -->
-    <p>Counter (Variable): <span id="counter"></span></p>
-    <button onclick="getCounter()">Get counter</button>
-    <br>
+        <h2 class="mt-5">Gasdurchschnitt</h2>
 
-    <hr>
-    <h4>Functions</h4>
-    <!-- Call functions example  -->
-    <p>Set Counter</p>
-    <input type="number" id="counterinput" value="0">
-    <button onclick="setCounter()">Set counter</button>
+        <!-- Aktueller Gas Level als Progressbar -->
+        <div class="progress">
+            <div id="gaslevel-bar" class="progress-bar bg-success" role="progressbar" style="width: 0%"></div>
+        </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+        <!-- Aktueller Gas Level als Text -->
+        <p id="gaslevel-text">Warte auf erste Messung...</p>
+
+        <h2 class="mt-5">Temperaturdurchschnitt</h2>
+
+        <!-- Durchschnittlicher Temperatur Level als Progressbar -->
+        <div class="progress">
+            <div class="templevel-bar progress-bar-striped" role="progressbar" style="width: 0%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+
+        <!-- Durchschnittlicher Lux Level als Text -->
+        <p id="templevel-text">Warte auf erste Messung...</p>
+
+        <div class="alert alert-danger d-flex align-items-center" role="alert">
+            <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"/></svg>
+            <div>
+
+    </div>
+
+    <!-- Bootstrap JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+
+    <!-- Eigenes JavaScript -->
     <script src="fruitquality.js"></script>
 </body>
 
