--- a/public/fruitquality.html
+++ b/public/fruitquality.html
@@ -27,21 +27,26 @@
         <!-- Aktueller Gas Level als Text -->
         <p id="gaslevel-text">Warte auf erste Messung...</p>
 
+
         <h2 class="mt-5">Temperaturdurchschnitt</h2>
 
-        <!-- Durchschnittlicher Temperatur Level als Progressbar -->
-        <div class="progress">
-            <div class="templevel-bar progress-bar-striped" role="progressbar" style="width: 0%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
-
-        <!-- Durchschnittlicher Lux Level als Text -->
-        <p id="templevel-text">Warte auf erste Messung...</p>
-
-        <div class="alert alert-danger d-flex align-items-center" role="alert">
-            <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"/></svg>
-            <div>
-
-    </div>
+        <p>
+            <label>DB name: </label>
+            <br>
+            <input type="text" id="db">
+        </p>
+    
+        <p>
+            <label>Collection name: </label>
+            <br>
+            <input type="text" id="collection">
+        </p>
+        <p>
+            <button onclick="getResult()">Get Result</button>
+        </p>
+    
+        <p id="result">-</p>
+        </div>
 
     <!-- Bootstrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
